--- a/quiz/templates/quiz/guest_quize.html
+++ b/quiz/templates/quiz/guest_quize.html
@@ -8,8 +8,8 @@
     <div class="container shadow-sm">
     <nav style="--bs-breadcrumb-divider: url(&#34;data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='8' height='8'%3E%3Cpath d='M2.5 0L1 1.5 3.5 4 1 6.5 2.5 8l4-4-4-4z' fill='currentColor'/%3E%3C/svg%3E&#34;);" aria-label="breadcrumb">
         <ol class="breadcrumb p-3">
-          <li class="breadcrumb-item fw-bold"><a style="color: rgb(10, 10, 48)" href="{% url 'facultyCourses' %}">My
-              Courses</a>
+          <li class="breadcrumb-item fw-bold"><a style="color: rgb(10, 10, 48)" href = "/"> <!-- href="{% url 'facultyCourses' %}"> -->
+            My Courses</a>
           </li>
           <li class="breadcrumb-item fw-bold"><a style="color: rgb(10, 10, 48)" href="{% url 'course' course.code %}">{{ course.name }}</a>
           </li>
@@ -67,7 +67,7 @@
           <!-- Options -->
           <div class="options-container">
             <div class="option p-2 my-2 rounded border" data-value="A">
-              <span class="option-marker">A</span> {{ question.option1 }}
+              <span class="option-marker">A</span> {{ question.option1|safe }}
             </div>
             <div class="option p-2 my-2 rounded border" data-value="B">
               <span class="option-marker">B</span> {{ question.option2 }}
