--- a/templates/index.html
+++ b/templates/index.html
@@ -190,7 +190,7 @@
     <!-- Navbar Starts -->
     <nav class="navbar sticky-top navbar-expand-lg navbar-dark navbar-mod">
         <div class="container">
-            <a class="navbar-brand fw-bold fs-5" href="/admin" target="_blank" data-bs-toggle="tooltip"
+            <a class="navbar-brand fw-bold fs-5" href="/" data-bs-toggle="tooltip"
                data-bs-placement="bottom" title="Access admin panel">
                <i data-lucide="graduation-cap" class="me-2" style="width: 20px; height: 20px;"></i>
                eLMS
@@ -202,19 +202,19 @@
             <div class="collapse navbar-collapse" id="navbarColor01">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active fw-semibold" aria-current="page" href="{% block courses %}{% endblock courses %}">
+                        <a class="nav-link active fw-semibold" aria-current="page"> <!-- href="{% block courses %}{% endblock courses %}"> -->
                             <i data-lucide="layout-dashboard" class="me-1" style="width: 18px; height: 18px;"></i>
                             Dashboard
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active fw-semibold" aria-current="page" href="/departments">
+                        <a class="nav-link active fw-semibold" aria-current="page" > <!-- href="/departments"> -->
                             <i data-lucide="building" class="me-1" style="width: 18px; height: 18px;"></i>
                             Departments
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active fw-semibold" href="{% block allCourses %}{% endblock %}">
+                        <a class="nav-link active fw-semibold">  <!-- href="{% block allCourses %}{% endblock %}"> -->
                             <i data-lucide="book-open" class="me-1" style="width: 18px; height: 18px;"></i>
                             Courses
                         </a>
@@ -244,17 +244,18 @@
                         </a>
                         <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="profileDropdown">
                             <li>
-                                <a class="dropdown-item" href="{% block profile_link %}{% endblock profile_link %}">
+                                <a class="dropdown-item"> <!-- href="{% block profile_link %}{% endblock profile_link %}"> -->
                                     <i data-lucide="user" class="me-2" style="width: 16px; height: 16px;"></i>
                                     Profile
                                 </a>
                             </li>
-                            <li>
+                            <!-- Temprary removed login section-->
+                            {% comment %} <li>
                                 <a class="dropdown-item" href="{% url 'std_logout' %}">
                                     <i data-lucide="log-out" class="me-2" style="width: 16px; height: 16px;"></i>
                                     Log out
                                 </a>
-                            </li>
+                            </li> {% endcomment %}
                         </ul>
                     </div>
                 </div>
